[gd_scene load_steps=2 format=3 uid="uid://b8ee6rt110053"]

[ext_resource type="Script" uid="uid://bg20p8k5ypxch" path="res://scripts/shop_ui.gd" id="1_shop"]

[node name="Shop" type="CanvasLayer"]
layer = 10
script = ExtResource("1_shop")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.9)

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Upgrade Shop"
horizontal_alignment = 1

[node name="UpgradeContainer" type="HBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ScrapLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"
